# archiform

./: .gitignore  CMakeLists.txt  README.md  log.md  plan.md  vcpkg.json
scripts/: build.sh  setup.sh
src/: Application.cpp  Application.h  main.cpp
